<resources>
    <string name="app_name">NotesApp</string>
    <string name="str_remind_me">Remind Me</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="lbl_dismiss">Dismiss</string>
    <string name="back_press">Tap back button again in order to exit</string>
    <string name="str_lbl_email_id">Email ID</string>
    <string name="str_please_enter_email_id">Please enter Email ID</string>
    <string name="str_lbl_password">Password</string>
    <string name="str_please_enter_password">Please enter Password</string>
    <string name="str_btn_login">Login</string>
    <string name="str_enter_valid_email">Please enter valid Email ID</string>
    <string name="str_lbl_addNote">AddNote</string>
    <string name="str_no_notes_added">No Notes Added</string>
    <string name="str_dashboard">Dashboard</string>
    <string name="str_title_new_reminder">New Reminder</string>
    <string name="btn_save">Save</string>
    <string name="btn_reset">Reset</string>
    <string name="str_reminder_name">Reminder Name</string>
    <string name="str_please_enter_reminder_name">Reminder name</string>
    <string name="str_please_select_date_and_time">Please Select Date and Time</string>
    <string name="str_lbl_reminder_description">Reminder Description</string>
    <string name="str_please_enter_reminder_description">Description</string>
    <string name="str_invalid_credentials">Invalid Credentials</string>
    <string name="str_db_name">Notes.realm</string>
    <string name="str_reminder_Set">Reminder set successfully..!</string>
    <string name="str_something_went_wrong">Something went wrong</string>
    <string name="str_reminder_updated">Reminder updated successfully..!</string>
    <string name="str_ok">OK</string>
    <string name="str_test_text">Lorem Ipsum is simply dummy text of the printing and typesetting industry</string>
    <string name="test_lbl_reminder_1">Reminder 1</string>
    <string name="str_enter_details">Please enter details</string>
    <string name="str_date_and_time">Date and Time</string>
    <string name="str_select_image">Capture Image</string>
    <string name="str_choose_image">Choose Image</string>
    <string name="str_coming_soon">Coming soon..!</string>
    <string name="str_access_denied">Access Denied</string>
    <string name="str_permission_denied">Permission denied by user, Go to settings and allow permission to use this camera.</string>
</resources>