<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/ivPop"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_100sdp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/_30sdp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/splash_logo" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_32sdp"
            android:layout_centerInParent="true"
            android:padding="@dimen/_18sdp">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvEmailId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="@string/str_lbl_email_id" />

            <EditText
                android:id="@+id/etEmailId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvEmailId"
                android:hint="@string/str_please_enter_email_id"
                android:importantForAutofill="no"
                android:inputType="textEmailAddress" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/etEmailId"
                android:layout_marginTop="@dimen/_18sdp"
                android:textStyle="bold"
                android:text="@string/str_lbl_password" />

            <EditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvPassword"
                android:layout_marginTop="2dp"
                android:maxLength="20"
                android:hint="@string/str_please_enter_password"
                android:imeOptions="actionDone"
                android:importantForAutofill="no"
                android:inputType="textPassword" />

            <Button
                android:id="@+id/btnLogin"
                style="@style/roundedButton"
                android:layout_below="@+id/etPassword"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_32sdp"
                android:layout_marginBottom="@dimen/_32sdp"
                android:paddingLeft="@dimen/_32sdp"
                android:paddingRight="@dimen/_32sdp"
                android:text="@string/str_btn_login" />
        </RelativeLayout>
    </RelativeLayout>

</layout>